--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -5,6 +5,21 @@ owner: Partners
 
 These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
+##<a id="v0.8.95"></a>v0.8.95
+
+**Release Date:** September 4, 2017
+
+Features included in this release:
+
+* Monitoring external services (MySQL, PostgreSQL, Memcached, MongoDB, RabbitMQ, Redis)
+* Monitoring external Memcached installations (e.g. ElastiCache Memcached)
+* Monitoring external MongoDB installations
+
+Known issues in this release:
+
+* Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
+  To [enable alerts](using.html#alerting-dashboards), open the **alerting** dashboard and click the save icon.
+
 ##<a id="v0.8.94"></a>v0.8.94
 
 **Release Date:** August 28, 2017
