--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -122,7 +122,10 @@ For more information about 3rd party services monitoring, see [3rd Party Service
 
 <a id='alerting-dashboards'></a>**Alerting dashboards** include panels with BOSH HM alerts and Diego alerts.
 
-<p class="note"><strong>Note</strong>: To enable alerts after installing "Altoros Heartbeat for PCF Tile", open dashboards with alerts ("Pivotal Cloud Foundry Overview" and dashboards with tag **alerting**) and click the save icon:</p>
+To enable alerts after installing "Altoros Heartbeat for PCF Tile", complete the following steps:
+
+1. Open dashboards with alerts ("Pivotal Cloud Foundry Overview" and dashboards with tag **alerting**) 
+2. Click the save icon:</p>
 
 <%= image_tag("images/diego-alerts.png") %>
 
