Fix software component names

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -72,7 +72,7 @@ The following table provides version and version-support information about Altor
     </tr>
     <tr>
         <td>Software component version</td>
-        <td>Grafana v4.4.1, collectd v5.7.2, StatsD v0.8.0, Carbon API 0.8.0, and GoCarbon 0.9.1</td>
+        <td>Grafana v4.4.1, collectd v5.7.2, StatsD v0.8.0, carbonapi 0.8.0, and go-carbon 0.9.1</td>
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
