Revert "changed 3rd party"
This reverts commit 2d973330f7771216912e1b55222145f4222e6d07.

--- a/docs-book/master_middleman/source/subnavs/altoros-heartbeat_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/altoros-heartbeat_subnav.erb
@@ -23,7 +23,7 @@
         <a href="/altoros-heartbeat/using.html">Using Altoros Heartbeat for PCF</a>
       </li>
       <li>
-        <a href="/altoros-heartbeat/services-monitoring.html">Third-Party Services Monitoring</a>
+        <a href="/altoros-heartbeat/services-monitoring.html">3rd Party Services Monitoring</a>
       </li>
       <li>
         <a href="/altoros-heartbeat/integration-with-logsearch.html">Altoros Log Search for PCF Integration</a>
