Rename "3rd Party" to "Third-Party"

--- a/docs-content/services-monitoring.html.md.erb
+++ b/docs-content/services-monitoring.html.md.erb
@@ -1,9 +1,9 @@
 ---
-title: 3rd Party Services Monitoring
+title: Third-Party Services Monitoring
 owner: Partners
 ---
 
-This topic describes how to use dashboards for 3rd party services.
+This topic describes how to use dashboards for third-party services.
 
 ##<a id='mysql'></a>MySQL
 
