--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -118,7 +118,7 @@ The dashboards accessible from the Admin view are:
 
 **Cf service** dashboards contain panels with service-specific metrics for various services (e.g. MySQL, PostgreSQL, Redis, and RabbitMQ).
 
-For more information about 3rd party services monitoring, see [3rd Party Services Monitoring](services-monitoring.html).
+For more information about third-party services monitoring, see [Third-Party Services Monitoring](services-monitoring.html).
 
 <a id='alerting-dashboards'></a>**Alerting dashboards** include panels with BOSH HM alerts and Diego alerts.
 
