--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -122,12 +122,20 @@ For more information about third-party services monitoring, see [Third-Party Ser
 
 <a id='alerting-dashboards'></a>**Alerting dashboards** include panels with BOSH HM alerts and Diego alerts.
 
-To enable alerts after installing "Altoros Heartbeat for PCF Tile", complete the following steps:
+To enable alerts after installing the Altoros Heartbeat for PCF tile, complete the following steps:
 
-1. Open dashboards with alerts ("Pivotal Cloud Foundry Overview" and dashboards with tag **alerting**) 
-2. Click the save icon:</p>
+1. Configure [Alert Notification Channels](http://docs.grafana.org/alerting/notifications/)
 
-<%= image_tag("images/diego-alerts.png") %>
+1. Open dashboards with alerts (dashboards with tag **alerting**)
+
+1. Click the save icon:</p>
+
+      <%= image_tag("images/diego-alerts.png") %>
+
+As an example of a custom alerting dashboard you can use <a href="examples/Example_of_Alerting_Dashboard.json" download>this dashboard with alerts for Diego cells' cpu/mem/swap and an alert for the percentage of running VMs in BOSH</a>.
+Download and [import](http://docs.grafana.org/reference/export_import/#importing-a-dashboard) it to see how it works.
+
+For information about creating and editing alerts in Grafana, see [Grafana documentation](http://docs.grafana.org/alerting/rules/).
 
 ###Developer View
 
