--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -135,6 +135,8 @@ To enable alerts after installing the Altoros Heartbeat for PCF tile, complete t
 As an example of a custom alerting dashboard you can use <a href="examples/Example_of_Alerting_Dashboard.json" download>this dashboard with alerts for Diego cells' cpu/mem/swap and an alert for the percentage of running VMs in BOSH</a>.
 Download and [import](http://docs.grafana.org/reference/export_import/#importing-a-dashboard) it to see how it works.
 
+<%= image_tag("images/import-example-alerting-dashboard.png") %>
+
 For information about creating and editing alerts in Grafana, see [Grafana documentation](http://docs.grafana.org/alerting/rules/).
 
 ###Developer View
