Fix mention of "externally deployed services"

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -29,7 +29,7 @@ The tile comes with pre-built integration with the following services available 
 
 This integration enables operators to monitor these services without any additional configuration.
 
-The tile comes with pre-built integration with the following external deployed services:
+The tile comes with pre-built integration with the following externally deployed services:
 
 - MySQL
 - PostgreSQL
@@ -38,7 +38,7 @@ The tile comes with pre-built integration with the following external deployed s
 - Redis
 - RabbitMQ
 
-This integration enables operators to monitor these services with additional configuration.
+Altoros Heartbest for PCF requires additional configuration to monitor these services.
 
 ## <a id='features'></a>Key Features
 
