--- a/docs-content/integration-with-logsearch.html.md.erb
+++ b/docs-content/integration-with-logsearch.html.md.erb
@@ -9,7 +9,7 @@ Integration with [Altoros Log Search for PCF](https://network.pivotal.io/product
 
 ##<a id='apps'></a>Integration of Application Logs
 
-On the **CF Apps Metrics for Ops with Logs**/**CF Apps Metrics for Devs with Logs** dashboard you see:
+On the **CF Apps Metrics for Ops with Logs**/**CF Apps Metrics for Devs with Logs** dashboard, you see:
 
 <%= image_tag("images/apps_metrics_with_logs_header.png") %>
 
@@ -19,13 +19,13 @@ The **Deploy** and **Errors** checkboxes, when selected, enable [annotations](ht
 
 <%= image_tag("images/annotation_example_apps.png") %>
 
-At the bottom of the dashboard you can view the application logs:
+At the bottom of the dashboard, you can view the application logs:
 
 <%= image_tag("images/apps_metrics_with_logs_logs.png") %>
 
 ##<a id='vms'></a>Integration of VM Logs
 
-On the **CF Components Stats with Logs** dashboard you see:
+On the **CF Components Stats with Logs** dashboard, you see:
 
 <%= image_tag("images/components_stats_with_logs_header.png") %>
 
@@ -35,7 +35,7 @@ The **Errors** checkbox, when selected, enables [annotations](http://docs.grafan
 
 <%= image_tag("images/annotation_example_vms.png") %>
 
-At the bottom of the dashboard you can view the VM logs:
+At the bottom of the dashboard, you can view the VM logs:
 
 <%= image_tag("images/components_stats_with_logs_logs.png") %>
 
