--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -8,7 +8,7 @@ This topic describes how to use Altoros Heartbeat for Pivotal Cloud Foundry (PCF
 ##<a id='create'></a>Creating a Service Instance, Heartbeat for Developers
 
 To start using Heartbeat, a developer needs to create an Altoros Heartbeat service instance inside their org/space.
-After this, they will be able to navigate to a URL in a browser to access Altoros Heartbeat's Grafana dashboard and log in using their PCF login and password.
+After this, they are able to navigate to a URL in a browser to access Altoros Heartbeat's Grafana dashboard and log in using their PCF login and password.
 After login, the developer gets access to Developer View.
 
 <p class="note"><strong>Note</strong>: You do not need to create service instances inside the org/space
@@ -27,7 +27,7 @@ To create an Altoros Heartbeat service instance:
     heartbeat            standard                            Heartbeat Monitoring Solution</pre>
 
 1. Find Heartbeat in the list of the available services and select the service plan.
-   Currently, only the standard service plan is available, and it will be selected by default.
+   Currently, only the standard service plan is available, and it is selected by default.
 
 1. Create a service instance.
 
