--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -7,13 +7,15 @@ These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
 ##<a id="v0.8.95"></a>v0.8.95
 
-**Release Date:** September 4, 2017
+**Release Date:** September 5, 2017
 
 Features included in this release:
 
 * Monitoring external services (MySQL, PostgreSQL, Memcached, MongoDB, RabbitMQ, Redis)
 * Monitoring external Memcached installations (e.g. ElastiCache Memcached)
 * Monitoring external MongoDB installations
+* Fixed the missing BOSH metrics in PCF v1.11
+* PCF v1.9 is no longer supported
 
 Known issues in this release:
 
