PCF v1.9 is no longer supported

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -68,7 +68,7 @@ The following table provides version and version-support information about Altor
     </tr>
     <tr>
         <td>Release date</td>
-        <td>September 4, 2017</td>
+        <td>September 5, 2017</td>
     </tr>
     <tr>
         <td>Software component version</td>
@@ -76,11 +76,11 @@ The following table provides version and version-support information about Altor
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>v1.9.x, v1.10.x, and v1.11.x</td>
+        <td>v1.10.x, and v1.11.x</td>
     </tr>
     <tr>
         <td>Compatible Elastic Runtime version(s)</td>
-        <td>v1.9.x, v1.10.x, and v1.11.x</td>
+        <td>v1.10.x, and v1.11.x</td>
     </tr>
     <tr>
         <td>IaaS support</td>
@@ -106,8 +106,8 @@ To complete installation of Altoros Heartbeat for PCF, you need the following:
 
 Altoros Heartbeat for PCF has the following requirements:
 
-* [Elastic Runtime](https://network.pivotal.io/products/elastic-runtime) v1.9.x, 1.10.x, 1.11.x
-* [Ops Manager](https://network.pivotal.io/products/ops-manager) v.1.9.x, 1.10.x, 1.11.x
+* [Elastic Runtime](https://network.pivotal.io/products/elastic-runtime) v1.10.x, v1.11.x
+* [Ops Manager](https://network.pivotal.io/products/ops-manager) v1.10.x, v1.11.x
 * Installation of the collectd add-on for PCF to enable PCF component VMs and
   the VMs of any other BOSH-deployed services expose system metrics to Heartbeat.
 For more information, see [Installing collectd Add-on for PCF](installing.html).
