--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -162,7 +162,8 @@ For more information about this feature, see [**Altoros Log Search for PCF Integ
 
 ##<a id='external_services'></a>Configure External Services Monitoring
 
-<p class="note"><strong>Note</strong>: Prior to configuring External Services Monitoring, make sure you have the latest version of the <a href="https://network.pivotal.io/products/altoros-heartbeat">collectd BOSH add-on installed</a>.</p>
+<p class="note"><strong>Note</strong>: Before configuring External Services Monitoring, make sure you have installed 
+   the latest version of the <a href="https://network.pivotal.io/products/altoros-heartbeat">collectd BOSH add-on</a>.</p>
 
 1. In the **Settings** tab, click **External Services Monitoring Configuration**.
 
@@ -222,9 +223,9 @@ For more information about this feature, see [**Altoros Log Search for PCF Integ
 
 1. Click **Save**.
 
-<p class="note"><strong>Note</strong>: Currently, only one instance of the MongoDB, MySQL or RabbitMQ services can be monitored.</p>
+<p class="note"><strong>Note</strong>: Currently, only one instance of the MongoDB, MySQL, or RabbitMQ services can be monitored.</p>
 
-For more information about 3rd party services monitoring, see [3rd Party Services Monitoring](services-monitoring.html).
+For more information about third-party services monitoring, see [Third-Party Services Monitoring](services-monitoring.html).
 
 ##<a id='mysqlproxy'></a>Configure MySQL Proxy
 
