--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -11,11 +11,14 @@ These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
 Features included in this release:
 
-* Monitoring external services (MySQL, PostgreSQL, Memcached, MongoDB, RabbitMQ, Redis)
+* Monitoring external services (MySQL, PostgreSQL, Memcached, MongoDB, RabbitMQ, and Redis)
 * Monitoring external Memcached installations (e.g. ElastiCache Memcached)
 * Monitoring external MongoDB installations
-* Fixed the missing BOSH metrics in PCF v1.11
 * PCF v1.9 is no longer supported
+
+Fixed issues in this release:
+
+* The missing BOSH metrics in PCF v1.11
 
 Known issues in this release:
 
