--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -318,15 +318,15 @@ follow the instructions in <a href="installing-collectd.html">Installing collect
 
 1. In the **Ops Manager Installation Dashboard**, click the **Ops Manager Director** tile.
 
-1. In the **Settings** tab, click **Director Config** and paste the copied BOSH HM Forwarder IP address:
+1. In the **Settings** tab, click **Director Config**.
 
-    1. for Ops Manager Director v1.10 - into the Metrics IP Address field.
+2. Do one of the following:
+  * For PCF v1.10, paste the copied BOSH HM Forwarder IP address into **Metrics IP Address**.
 
-    <%= image_tag("images/ops-manager-director-2.png") %>
+         <%= image_tag("images/ops-manager-director-2.png") %>
+  * For PCF v1.11 or later, paste the copied BOSH HM Forwarder IP address into **Bosh HM Forwarder IP Address**.
 
-    1. for Ops Manager Director v1.11+ - into the Bosh HM Forwarder IP Address field.
-
-    <%= image_tag("images/ops-manager-director-3.png") %>
+         <%= image_tag("images/ops-manager-director-3.png") %>
 
 1. Click **Save**.
 
