adds fixed issues to release notes[#150853625]

--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -63,8 +63,11 @@ Known issues in this release:
 Features included in this release:
 
 * Remove the minor version number from stemcell criteria to allow the user to apply stemcell security patches
-* Fixed a bug affecting performance
 * VM requirements decreased in **Resource Config**
+
+Fixed issues in this release:
+
+* A bug affecting performance
 
 Known issues in this release:
 
