Update documentation for GA release

--- a/docs-book/master_middleman/source/subnavs/altoros-heartbeat_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/altoros-heartbeat_subnav.erb
@@ -5,7 +5,7 @@
   <div class="nav-content">
     <ul>
       <li>
-        <a id='home-nav-link' href="/altoros-heartbeat/index.html">Altoros Heartbeat for PCF (Beta)</a>
+        <a id='home-nav-link' href="/altoros-heartbeat/index.html">Altoros Heartbeat for PCF</a>
       </li>
       <li>
         <a href="/altoros-heartbeat/installing.html">Installing and Configuring Altoros Heartbeat for PCF</a>
@@ -27,6 +27,12 @@
       </li>
       <li>
         <a href="/altoros-heartbeat/integration-with-logsearch.html">Altoros Log Search for PCF Integration</a>
+      </li>
+      <li>
+        <a href="/altoros-heartbeat/ha-with-external-lb.html">High Availability</a>
+      </li>
+      <li>
+        <a href="/altoros-heartbeat/altoros-heartbeat-troubleshooting.html">Altoros Heartbeat Troubleshooting</a>
       </li>
       <li>
         <a href="/altoros-heartbeat/release-notes.html">Release Notes</a>
