--- a/docs-content/installing-collectd.html.md.erb
+++ b/docs-content/installing-collectd.html.md.erb
@@ -59,7 +59,7 @@ Follow the steps below to create a collectd manifest for your deployment:
 * `releases: version`: Please use the version of collectd downloaded from Pivotal Network
 * `collectd: graphite_prefix`: Do not change the graphit_prefix name. It must be `cf.collectd`.
 * `collectd: graphite_servers`: If you are using Heartbeat in high availability mode, use your Load Balancer endpoint for collectd. For details, see [External Load Balancer configuration](ha-with-external-lb.html#lb-config).
-If your are not going to use the high availability mode, use the IP address of any of Altoros Heartbeat's backends. For details, see [Finding Backend IPs](ha-with-external-lb.html#finding-backend-ip).
+If you are not going to use the high availability mode, use the IP address of any of Altoros Heartbeat's backends. For details, see [Finding Backend IPs](ha-with-external-lb.html#finding-backend-ip).
 * `collectd: interval`: You can modify the 10 second default interval value. This value specifies how often the collectd add-on gathers metrics from VMs.
 
 ##<a id='deploy'></a> Downloading and Deploying the collectd Add-on
