Copy edit line 45

--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -42,7 +42,7 @@ Another case when you might need to update a service instance is to manually ref
 <p class="note"><strong>Note</strong>: Altoros highly recommends keeping the <b>Heartbeat Grafana Bootstrap</b> errand enabled.
  For details, see <a href="installing.html#errands">Configure Errands</a>.</p>
 
-To update an Altoros Heartbeat service instances, run:
+To update an Altoros Heartbeat service instance, run:
 
 <pre class="terminal">cf update-service heartbeat -c '{"version":some_new_number}'</pre>
 
