Capitalized Configuration in line 8

--- a/docs-content/ha-with-external-lb.html.md.erb
+++ b/docs-content/ha-with-external-lb.html.md.erb
@@ -5,7 +5,7 @@ owner: Partners
 
 This topic describes implementation of high availability for Altoros Heartbeat for PCF using an external load balancer.
 
-##<a id='lb-config'></a>External Load Balancer configuration
+##<a id='lb-config'></a>External Load Balancer Configuration
 
 Setup and proper configuration of an external Load Balancer is required to implement high availability of the installation. Any highly available TCP and UDP Load Balancer is acceptable.
 
