--- a/docs-content/altoros-heartbeat-troubleshooting.html.md.erb
+++ b/docs-content/altoros-heartbeat-troubleshooting.html.md.erb
@@ -3,8 +3,12 @@ title: Altoros Heartbeat Troubleshooting
 owner: Partners
 ---
 
-This topic describes known issues and troubleshooting strategies
+This topic describes known issues and troubleshooting strategies.
 
-##<a id='mysql-troubleshooting'></a>MySQL troubleshooting
+##<a id='mysql-troubleshooting'></a>MySQL Troubleshooting
 
-If the MySQL cluster used by your Heartbeat installation is broken, see [Сluster Behavior](https://github.com/cloudfoundry/cf-mysql-release/blob/v35/docs/cluster-behavior.md) and [Bootstrapping](https://github.com/cloudfoundry/cf-mysql-release/blob/v35/docs/bootstrapping.md) documentation of the MySQL BOSH release for guidance on how to eliminate the problem, or [contact Altoros](index.html#feedback) for help.
+If the MySQL cluster used by your Heartbeat installation is broken,
+see [Сluster Behavior](https://github.com/cloudfoundry/cf-mysql-release/blob/v35/docs/cluster-behavior.md)
+and [Bootstrapping](https://github.com/cloudfoundry/cf-mysql-release/blob/v35/docs/bootstrapping.md)
+documentation of the MySQL BOSH release for guidance on how to eliminate the problem
+or [contact Altoros](index.html#feedback) for help.
