--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -14,7 +14,7 @@ Features included in this release:
 * Support for a High Availability mode of operation
 * Backend and frontend VMs are separated to improve flexibility and scalability
 * New versions of components
-* Heartbeat URL is `monitoring.%system-domain%` now
+* The Heartbeat URL is now `monitoring.%system-domain%`
 
 Known issues in this release:
 
